--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ select {
     padding: 5px;
 }
 
-main {
+.book-items {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
