--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 
 .App {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     text-align: center;
 }
 
@@ -79,15 +79,15 @@ form {
 }
 
 select {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 1em;
     background-color: white;
     border: 1px solid gray;
     width: 100%;
     padding: 5px;
 }
-option{
-    font-family: 'Roboto', sans-serif;
+option {
+    font-family: "Roboto", sans-serif;
 }
 
 .book-items {
@@ -105,7 +105,7 @@ option{
 }
 
 .book {
-    background-color: rgba(156, 156, 156, 0.13);
+    background-color: rgba(156, 156, 156, 0.3);
     width: 300px;
     margin-bottom: 40px;
     padding: 20px;
@@ -114,7 +114,7 @@ option{
 .book__image {
     width: 60%;
     box-shadow: 5px 5px 5px 1px black;
-    transition: transform .2s ease;
+    transition: transform 0.2s ease;
 }
 
 .book__image:hover {
@@ -127,7 +127,7 @@ option{
 
 .book__categories {
     color: gray;
-    font-size: .8em;
+    font-size: 0.8em;
 }
 
 .book__title {
@@ -138,7 +138,7 @@ option{
 .book__authors {
     margin-top: 0;
     color: gray;
-    font-size: .8em;
+    font-size: 0.8em;
 }
 
 .load-button {
@@ -146,11 +146,21 @@ option{
 }
 
 .load-books {
+    background-color: rgba(156, 156, 156, 0.3);
     cursor: pointer;
     border: none;
+    /* filter: drop-shadow(1px 1px 1px black); */
+    box-shadow: 1px 1px 5px 1px black;
+    font-weight: 500;
+    font-size: 1em;
+    width: 40%;
     border-radius: 8px;
     padding: 10px 20px;
     margin-bottom: 25px;
+    transition: 0.3s ease;
+}
+.load-books:hover {
+    background-color: rgba(156, 156, 156, 0.5);
 }
 
 /* dasd asdas das dasd asdas das das dsa*/
@@ -174,7 +184,6 @@ option{
 .book-image img {
     width: 40%;
     box-shadow: 5px 5px 10px 1px black;
-
 }
 
 .book-description {
@@ -183,15 +192,16 @@ option{
     font-size: 2em;
 }
 
-.book-categories, .book-authors {
+.book-categories,
+.book-authors {
     margin-top: 0;
     color: gray;
-    font-size: .7em;
+    font-size: 0.7em;
 }
 
 .book-link {
     color: blue;
-    font-size: .7em;
+    font-size: 0.7em;
 }
 
 .book-content {
