--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ a {
     color: inherit;
 }
 
-/*asdfsada dasd asd sad as dsad asdas dsa*/
+/* main styles */
 .search__title {
     animation: App-logo-float infinite 3s ease-in-out;
     margin-bottom: 10px;
@@ -167,7 +167,7 @@ option {
 .loading-block img {
     width: 50px;
 }
-/* dasd asdas das dasd asdas das das dsa*/
+/* main styles */
 
 /* single-book */
 .asd {
