--- a/src/App.css
+++ b/src/App.css
@@ -1,300 +1,300 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
 .App {
-    font-family: "Roboto", sans-serif;
-    text-align: center;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 /* main styles */
 .search__title {
-    animation: App-logo-float infinite 3s ease-in-out;
-    margin-bottom: 10px;
+  animation: App-logo-float infinite 3s ease-in-out;
+  margin-bottom: 10px;
 }
 
 .title-link {
-    color: white;
+  color: white;
 }
 
 .header {
-    background-image: url("./img/background.jpg");
+  background-image: url('./img/background.jpg');
 }
 
 label {
-    font-family: inherit;
-    color: white;
+  font-family: inherit;
+  color: white;
 }
 
 h1 {
-    color: white;
+  color: white;
 }
 
 .shadow {
-    padding: 100px;
-    background-color: rgba(0, 0, 0, 0.7);
+  padding: 100px;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .container {
-    width: 100%;
+  width: 100%;
 }
 
 form {
-    position: relative;
-    display: flex;
-    max-width: 500px;
-    margin: 0 auto 20px;
+  position: relative;
+  display: flex;
+  max-width: 500px;
+  margin: 0 auto 20px;
 }
 
 .search__input {
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 1em;
-    width: 100%;
-    padding: 10px 10px;
-    border: none;
-    border-radius: 8px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 1em;
+  width: 100%;
+  padding: 10px 10px;
+  border: none;
+  border-radius: 8px;
 }
 
 .btn-search {
-    background: none;
-    border: none;
-    cursor: pointer;
-    position: absolute;
-    right: 5px;
-    top: 50%;
-    width: 1em;
-    transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  width: 1.5em;
+  transform: translateY(-50%);
 }
 
 .search__selects {
-    display: flex;
-    justify-content: space-around;
-    max-width: 600px;
-    margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 select {
-    font-family: "Roboto", sans-serif;
-    font-size: 1em;
-    background-color: white;
-    border: 1px solid gray;
-    width: 100%;
-    padding: 5px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1em;
+  background-color: white;
+  border: 1px solid gray;
+  width: 100%;
+  padding: 5px;
 }
 option {
-    font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .book-items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .total-books {
-    width: 100%;
+  width: 100%;
 }
 
 .book-item {
-    width: 100%;
+  width: 100%;
 }
 
 .book {
-    background-color: rgba(156, 156, 156, 0.3);
-    width: 300px;
-    margin-bottom: 40px;
-    padding: 20px;
+  background-color: rgba(156, 156, 156, 0.3);
+  width: 300px;
+  margin-bottom: 40px;
+  padding: 20px;
 }
 
 .book__image {
-    width: 60%;
-    box-shadow: 5px 5px 5px 1px black;
-    transition: transform 0.2s ease;
+  width: 60%;
+  box-shadow: 5px 5px 5px 1px black;
+  transition: transform 0.2s ease;
 }
 
 .book__image:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .book__description {
-    text-align: left;
+  text-align: left;
 }
 
 .book__categories {
-    color: gray;
-    font-size: 0.8em;
+  color: gray;
+  font-size: 0.8em;
 }
 
 .book__title {
-    margin-bottom: 5px;
-    font-size: 1em;
+  margin-bottom: 5px;
+  font-size: 1em;
 }
 
 .book__authors {
-    margin-top: 0;
-    color: gray;
-    font-size: 0.8em;
+  margin-top: 0;
+  color: gray;
+  font-size: 0.8em;
 }
 
 .load-button {
-    width: 100%;
+  width: 100%;
 }
 
 .load-books {
-    background-color: rgba(156, 156, 156, 0.3);
-    cursor: pointer;
-    border: none;
-    box-shadow: 1px 1px 5px 1px black;
-    font-weight: 500;
-    font-size: 1em;
-    width: 40%;
-    border-radius: 8px;
-    padding: 10px 20px;
-    margin-bottom: 25px;
-    transition: 0.3s ease;
+  background-color: rgba(156, 156, 156, 0.3);
+  cursor: pointer;
+  border: none;
+  box-shadow: 1px 1px 5px 1px black;
+  font-weight: 500;
+  font-size: 1em;
+  width: 40%;
+  border-radius: 8px;
+  padding: 10px 20px;
+  margin-bottom: 25px;
+  transition: 0.3s ease;
 }
 .load-books:hover {
-    background-color: rgba(156, 156, 156, 0.5);
+  background-color: rgba(156, 156, 156, 0.5);
 }
 .loading-block {
-    margin-top: 20px;
-    width: 100%;
+  margin-top: 20px;
+  width: 100%;
 }
 .loading-block img {
-    width: 50px;
+  width: 50px;
 }
 /* main styles */
 
 /* single-book */
 .asd {
-    margin-top: -50px;
+  margin-top: -50px;
 }
 
 .single-book {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .book-image {
-    background-color: rgba(156, 156, 156, 0.13);
-    width: 40%;
-    padding: 50px 0;
+  background-color: rgba(156, 156, 156, 0.13);
+  width: 40%;
+  padding: 50px 0;
 }
 
 .book-image img {
-    width: 40%;
-    box-shadow: 5px 5px 10px 1px black;
+  width: 40%;
+  box-shadow: 5px 5px 10px 1px black;
 }
 
 .book-description {
-    width: 60%;
-    text-align: left;
-    font-size: 2em;
+  width: 60%;
+  text-align: left;
+  font-size: 2em;
 }
 
 .book-categories,
 .book-authors {
-    margin-top: 0;
-    color: gray;
-    font-size: 0.7em;
+  margin-top: 0;
+  color: gray;
+  font-size: 0.7em;
 }
 
 .book-link {
-    color: blue;
-    font-size: 0.7em;
+  color: blue;
+  font-size: 0.7em;
 }
 
 .book-content {
-    padding: 25px;
+  padding: 25px;
 }
 /* single-book */
 
 /* error */
-.error-block{
-    background-color: rgba(255, 0, 0, 0.5);
-    max-width: 500px;
-    margin: 0 auto 10px;
-    padding: 10px 0;
-    animation: error-message .5s;
+.error-block {
+  background-color: rgba(255, 0, 0, 0.5);
+  max-width: 500px;
+  margin: 0 auto 10px;
+  padding: 10px 0;
+  animation: error-message 0.5s;
 }
-.error-text{
-    color: white;
-    margin: 0;
-    font-weight: 500;
+.error-text {
+  color: white;
+  margin: 0;
+  font-weight: 500;
 }
 
 .nav-arrow {
-    background-image: url("./img/Arrow_top.png");
-    background-size: cover;
-    position: fixed;
-    display: block;
-    width: 30px;
-    height: 30px;
-    right: 5px;
-    bottom: 5px;
+  background-image: url('./img/Arrow_top.png');
+  background-size: cover;
+  position: fixed;
+  display: block;
+  width: 30px;
+  height: 30px;
+  right: 5px;
+  bottom: 5px;
 }
 
 @media (max-width: 540px) {
-    .shadow {
-        padding: 40px;
-    }
+  .shadow {
+    padding: 40px;
+  }
 
-    .search__selects {
-        flex-direction: column;
-    }
+  .search__selects {
+    flex-direction: column;
+  }
 
-    .search__selects-categories {
-        margin-bottom: 20px;
-    }
+  .search__selects-categories {
+    margin-bottom: 20px;
+  }
 
-    .book {
-        width: 250px;
-    }
+  .book {
+    width: 250px;
+  }
 
-    .single-book {
-        flex-direction: column;
-    }
+  .single-book {
+    flex-direction: column;
+  }
 
-    .book-image {
-        width: 100%;
-    }
+  .book-image {
+    width: 100%;
+  }
 
-    .book-description {
-        font-size: 1.2em;
-        width: 100%;
-    }
+  .book-description {
+    font-size: 1.2em;
+    width: 100%;
+  }
 }
 
 @keyframes error-message {
-    0%{
-        opacity: 0;
-    }
-    25%{
-        opacity: .3;
-    }
-    50%{
-        opacity: .5;
-    }
-    75%{
-        opacity: .7;
-    }
-    100%{
-        opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.3;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes App-logo-float {
-    0% {
-        transform: translateY(0);
-    }
-    50% {
-        transform: translateY(10px);
-    }
-    100% {
-        transform: translateY(0px);
-    }
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
